Fix publish dates margin
Publish dates on the blog index page have been shifted slightly to the
right. The misalignment was perhaps due to the date being in a monospace
font.

--- a/source/assets/stylesheets/_typography.scss
+++ b/source/assets/stylesheets/_typography.scss
@@ -63,6 +63,7 @@ a {
 	font-family: $code-font;
 	color: $colour-dark-gray;
 	line-height: 1em;
+	margin-left: 0.05em;
 }
 
 .title-listing {
